crates/data-dict/tests/snapshots/validate_meta__unreadable_source_reported.snap
---
source: crates/data-dict/tests/validate_meta.rs
expression: "common::sanitize(&problems.render().join(\"\\n\"), &dir)"
---
Error: [M05] A table's `source` must point at a readable Parquet file.
   ╭─[ dict.yaml:6:16 ]
   │
 6 │       parquet: missing.parquet
   │                ───────┬───────  
   │                       ╰───────── Parquet error: Cannot open file: No such file or directory (os error 2)
   ┆ 
───╯
